# nary-lang

./: Cargo.toml  README.md  rustfmt.toml
examples/: arrays_and_structs.rs  custom_types_and_methods.rs  function_decl3.rhai  hello.rs  if1.rhai  nary_runner.rs  reuse_scope.rs  rhai_runner.rs  simple_fn.rs  speed_test.rhai  string.rhai
scripts/: array.nr  array.rhai  assignment.rhai  function_decl1.rhai  function_decl2.rhai  function_decl3.rhai  if1.nr  op1.nr  op1.rhai  op2.nr  op2.rhai  op3.nr  op3.rhai  speed_test.nr  string.nr  string.rhai  threads.nr  while.rhai
src/: engine.rs  fn_register.rs  lib.rs  main.rs  ops.rs  parser.rs  tests.rs
