[package]
name = "rhai"
version = "0.4.0"
authors = ["Jonathan Turner"]
description = "Embedded scripting for Rust"
homepage = "https://github.com/jonathandturner/rhai"
repository = "https://github.com/jonathandturner/rhai"
readme = "README.md"
license = "MIT/Apache-2.0"
include = [
    "**/*.rs",
    "scripts/*.rhai",
    "Cargo.toml"
]
