[package]
name = "nary"
version = "0.1.2"
authors = ["luciusmagn"]
description = "Embedded scripting language, a fork of Jonathan Turner's Rhai"
homepage = "https://github.com/luciusmagn/nary"
repository = "https://github.com/luciusmagn/nary"
readme = "README.md"
license = "MIT/Apache-2.0"
include = [
    "**/*.rs",
    "scripts/*.rhai",
    "Cargo.toml"
]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[features]
default = ["stdlib"]
stdlib = []

[[bin]]
name = "arrays"
path = "examples/arrays_and_structs.rs"
test = false

[[bin]]
name = "types"
path = "examples/custom_types_and_methods.rs"
test = false

[[bin]]
name = "hello"
path = "examples/hello.rs"
test = false

[[bin]]
name = "reuse_scope"
path = "examples/reuse_scope.rs"
test = false

[[bin]]
name = "nary_runner"
path = "examples/nary_runner.rs"
test = false

[[bin]]
name = "simple_fn"
path = "examples/simple_fn.rs"
test = false
